Bug 457145 - Discover crashes in KNSReviews::userName() when opening "Linux Font project Fonts: Var & Fixed" in Plasma Addons > Fonts
Summary: Discover crashes in KNSReviews::userName() when opening "Linux Font project F...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: master
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 453841 457411 457418 457444 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-26 01:58 UTC by mpcolalillo
Modified: 2022-08-04 19:12 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mpcolalillo 2022-07-26 01:58:18 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open Discover
2. Click Plasma Addons
3. Click Fonts
4. Click on the "Linux Font project Fonts: Var & Fixed." Do not hit Install, just try clicking on the main bar of it, as if you want to read more about it before installing.
OBSERVED RESULT
Discover closed unexpectedly.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 22.04
(available in About System)
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Kernel Version 5.15.0-41-generic (64-bit)
Graphics Platform: X11

Hardware:
Processors: 2 × Intel® Celeron® N4000 CPU @ 1.10GHz
Memory: 3.7 GiB of RAM
Graphics Processor: llvmpipe
Comment 1 Paul Worrall 2022-07-26 08:13:43 UTC
For me it crashes regardless of which font is selected.  The following is output to the terminal when it crashes:

Hspell: can't open /usr/share/hspell/hebrew.wgz.sizes.
kf.sonnet.clients.hspell: HSpellDict::HSpellDict: Init failed
29 -- exe=/usr/bin/plasma-discover
17 -- platform=wayland
24 -- appname=plasma-discover
17 -- apppath=/usr/bin
10 -- signal=11
9 -- pid=8338
19 -- appversion=5.25.80
21 -- programname=Discover
31 -- bugaddress=submit@bugs.kde.org
30 -- productname=discover/discover
12 -- startupid=0
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = plasma-discover path = /usr/bin pid = 8338
KCrash: Arguments: /usr/bin/plasma-discover 
The Wayland connection experienced a fatal error: Bad file descriptorHspell: can't open /usr/share/hspell/hebrew.wgz.sizes.
kf.sonnet.clients.hspell: HSpellDict::HSpellDict: Init failed
29 -- exe=/usr/bin/plasma-discover
17 -- platform=wayland
24 -- appname=plasma-discover
17 -- apppath=/usr/bin
10 -- signal=11
9 -- pid=8338
19 -- appversion=5.25.80
21 -- programname=Discover
31 -- bugaddress=submit@bugs.kde.org
30 -- productname=discover/discover
12 -- startupid=0
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = plasma-discover path = /usr/bin pid = 8338
KCrash: Arguments: /usr/bin/plasma-discover 
The Wayland connection experienced a fatal error: Bad file descriptor
Comment 2 Nate Graham 2022-07-26 18:46:52 UTC
Can reproduce 100% with current git master. Here's the scary backtrace:

#0  __pthread_kill_implementation
    (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007f4fe988ecb3 in __pthread_kill_internal (signo=6, threadid=<optimized out>)
    at pthread_kill.c:78
#2  0x00007f4fe983e9c6 in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#3  0x00007f4fec7b99f2 in KCrash::defaultCrashHandler(int) (sig=6)
    at /home/nate/kde/src/kcrash/src/kcrash.cpp:633
#4  0x00007f4fe983ea70 in <signal handler called> () at /lib64/libc.so.6
#5  __pthread_kill_implementation
    (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#6  0x00007f4fe988ecb3 in __pthread_kill_internal (signo=6, threadid=<optimized out>)
    at pthread_kill.c:78
#7  0x00007f4fe983e9c6 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#8  0x00007f4fe98287f4 in __GI_abort () at abort.c:79
#9  0x00007f4fa156ab87 in log_assert_failed
    (text=<optimized out>, file=<optimized out>, line=<optimized out>, func=<optimized out>)
    at ../src/basic/log.c:866
#10 0x00007f4fa156d322 in safe_close (fd=47) at ../src/basic/fd-util.c:74
#11 0x00007f4fa1576775 in varlink_clear (v=v@entry=0x7f4f400021f0) at ../src/shared/varlink.c:359
#12 0x00007f4fa1576816 in varlink_destroy (v=0x7f4f400021f0) at ../src/shared/varlink.c:378
#13 varlink_unref (p=0x7f4f400021f0) at ../src/shared/varlink.c:384
#14 0x00007f4fa1578763 in varlink_unrefp (p=0x7f4f50ff9fc8) at ../src/shared/varlink.h:161
#15 _nss_resolve_gethostbyname4_r
    (name=name@entry=0x7f4f40022a98 "www.sigmyne.com", pat=pat@entry=0x7f4f50ffa260, buffer=0x7f4f50ffa570 "", buflen=<optimized out>, errnop=errnop@entry=0x7f4f50ffb540, h_errnop=h_errnop@entry=0x7f4f50ffb5a4, ttlp=0x0) at ../src/nss-resolve/nss-resolve.c:233
#16 0x00007f4fe98f9f43 in gaih_inet (name=<optimized out>, 
    name@entry=0x7f4f40022a98 "www.sigmyne.com", service=service@entry=0x0, req=req@entry=0x7f4f50ffaa00, pai=pai@entry=0x7f4f50ffa468, naddrs=naddrs@entry=0x7f4f50ffa464, tmpbuf=tmpbuf@entry=0x7f4f50ffa560) at ../sysdeps/posix/getaddrinfo.c:747
#17 0x00007f4fe98fa646 in __GI_getaddrinfo
    (name=<optimized out>, service=<optimized out>, hints=0x7f4f50ffaa00, pai=0x7f4f50ffa9e0)
    at ../sysdeps/posix/getaddrinfo.c:2240
#18 0x00007f4fead2d7af in QHostInfoAgent::lookup(QString const&) (hostName=...)
    at ../../include/QtCore/../../src/corelib/tools/qarraydata.h:61
#19 0x00007f4fead4189b in QHostInfoAgent::fromName(QString const&) (hostName=...)
    at kernel/qhostinfo_unix.cpp:210
#20 0x00007f4fead300ab in QHostInfoRunnable::run() (this=0x7f4f8401c9d0)
    at kernel/qhostinfo.cpp:881
#21 0x00007f4fea0eb482 in QThreadPoolThread::run() (this=0x7f4f3c0035b0)
    at thread/qthreadpool.cpp:100
#22 0x00007f4fea0e8447 in QThreadPrivate::start(void*) (arg=0x7f4f3c0035b0)
    at thread/qthread_unix.cpp:331
#23 0x00007f4fe988ce2d in start_thread (arg=<optimized out>) at pthread_create.c:442
#24 0x00007f4fe99121b0 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
Comment 3 Aleix Pol 2022-07-26 18:49:45 UTC
Git commit 82806b2aa129eced8847642c90ee36d73586ec2f by Aleix Pol.
Committed on 26/07/2022 at 18:48.
Pushed by apol into branch 'master'.

kns: Make KNSReview aware of its possible lack of AtticaProvider

Now it won't crash anymore.

M  +3    -0    libdiscover/backends/KNSBackend/KNSReviews.cpp

https://invent.kde.org/plasma/discover/commit/82806b2aa129eced8847642c90ee36d73586ec2f
Comment 4 Aleix Pol 2022-07-26 18:51:16 UTC
Git commit 5bf1db7242da5649d17aa289633f2601ec57cc58 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 26/07/2022 at 18:51.
Pushed by apol into branch 'Plasma/5.25'.

kns: Make KNSReview aware of its possible lack of AtticaProvider

Now it won't crash anymore.


(cherry picked from commit 82806b2aa129eced8847642c90ee36d73586ec2f)

M  +3    -0    libdiscover/backends/KNSBackend/KNSReviews.cpp

https://invent.kde.org/plasma/discover/commit/5bf1db7242da5649d17aa289633f2601ec57cc58
Comment 5 Aleix Pol 2022-07-26 18:51:37 UTC
Git commit 886862cce10ba31caa7dedc6c4598a2301ba56ac by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 26/07/2022 at 18:51.
Pushed by apol into branch 'Plasma/5.24'.

kns: Make KNSReview aware of its possible lack of AtticaProvider

Now it won't crash anymore.


(cherry picked from commit 82806b2aa129eced8847642c90ee36d73586ec2f)

M  +3    -0    libdiscover/backends/KNSBackend/KNSReviews.cpp

https://invent.kde.org/plasma/discover/commit/886862cce10ba31caa7dedc6c4598a2301ba56ac
Comment 6 Aleix Pol 2022-07-26 19:21:11 UTC
*** Bug 453841 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2022-08-02 15:25:34 UTC
*** Bug 457411 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2022-08-02 15:26:52 UTC
*** Bug 457418 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2022-08-04 19:12:22 UTC
*** Bug 457444 has been marked as a duplicate of this bug. ***