kns: Make KNSReview aware of its possible lack of AtticaProvider

Now it won't crash anymore.

BUG: 457145


(cherry picked from commit 82806b2aa129eced8847642c90ee36d73586ec2f)